--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 
 # Name of your site (displayed in the header)
 name: Maker @ IT Nerd Space
+title: Maker @ IT Nerd Space
 
 # Short bio or description (displayed in the header)
 description: My blog about Hacking and Making
@@ -76,7 +77,7 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
