--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ description: My blog about Hacking and Making
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/ITNerdSpace/maker/raw/master/images/logo.png
 
+force-https: true
+
 #
 # Flags below are optional
 #
